--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,6 +40,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: [linux/amd64, linux/arm64]
+          platforms: linux/amd64
           push: true
           tags: olkruglova/python-helloworld:latest
